# kagibox

./: .gitignore  LICENSE.txt  README.md  build.bat  build.ps1  dev.bat  dev.ps1  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  crypto.rs  generator.rs  lib.rs  main.rs  vault.rs
