[package]
name = "kagibox"
version = "0.1.0"
description = "KagiBox – Local Password Manager"
authors = []
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "kagibox_lib"
crate-type = ["cdylib"]

[[bin]]
name = "kagibox"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "fs"] }
